correct hidden title Benefits

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </section>
       <section>
         <!-- Hidden title benefits-->
-        <h2>Benefits</h2>
+        <h2>Benefits hidden</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
